--- a/app/assets/stylesheets/ingredients/_ingredients.scss
+++ b/app/assets/stylesheets/ingredients/_ingredients.scss
@@ -1,15 +1,11 @@
 .ingredient-names h3 {
-  font-size: 20px;
-  margin-left: 10px;
-  margin-top: 11px;
-  margin-bottom: 2.5px;
-  color: white;
+  font-size: 15px;
+  color: black;
 }
 
 .ingredient-names h2 {
-  font-size: 30px;
-  color: white;
-  margin-left: 10px;
+  font-size: 20px;
+  color: black;
 }
 
 // .title-test {
