--- a/app/assets/stylesheets/method/_method.scss
+++ b/app/assets/stylesheets/method/_method.scss
@@ -1,15 +1,16 @@
 .recipe-method h4 {
-  font-size: 30px;
-  color: white;
+  font-size: 20px;
+  color: black;
   margin-left: 10px;
 }
 
 .recipe-method p {
-  color: white;
+  color: black;
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 13px;
   margin-left: 10px;
   margin-right: 10px;
+  font-size: 17px;
 }
