--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -15,7 +15,7 @@
 }
 
 .tabs {
-  background: #53443F;
+  background: white;
   display: flex;
   padding: 10px 10px 0 10px
 }
@@ -37,7 +37,7 @@
   margin-bottom: 0;
 }
 .tab {
-  background: #756A66;
+  background: white;
   flex: 0 0 50%;
   text-align: center;
   padding: 20px 0;
