finished majority of show page, both tabs

--- a/app/assets/stylesheets/ingredients/_ingredients.scss
+++ b/app/assets/stylesheets/ingredients/_ingredients.scss
@@ -1,10 +1,10 @@
 .ingredient-names h3 {
-  font-size: 15px;
+  font-size: 20px;
   color: black;
 }
 
-.ingredient-names h2 {
-  font-size: 20px;
+.ingredient-names li {
+  font-size: 17px;
   color: black;
 }
 
