--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -27,7 +27,7 @@
   </div>
 </div>
 
-<div class="wrapper">
+<div class="wrapper" style="height:56px;">
   <div class="tbs">
     <a class="tb active" id="tab-ingredients" href="#">
       <p> Ingredients </p>
@@ -58,7 +58,7 @@
 
   <div id="cont-method" class="hidden">
     <div class="recipe-method">
-      <h4> Method </h4>
+      <h2> Method </h2>
       <p> <%= @recipe.method %> </p>
     </div>
   </div>
