--- a/app/assets/stylesheets/recipes/_recipes_show.scss
+++ b/app/assets/stylesheets/recipes/_recipes_show.scss
@@ -30,11 +30,20 @@
 }
 
 .recipe-details {
-  padding: 26px 24px 84px 10px;
+  padding: 20px 10px 84px 20px;
   background-color: white;
-}
 
-.recipe-details ul {
-  padding-left: 24px;
-  color: black;
+  h2, p, ul {
+    margin: 0;
+    padding-bottom: 10px;
+  }
+
+  h2 {
+  font-size: 20px;
+  font-weight: bold;
+  }
+
+  p, ul {
+  font-weight: light;
+  }
 }
