--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -21,17 +21,21 @@
   </div>
 
   <%= f.input :method, placeholder: 'Instructions to cook your recipe' %>
-  <%= f.input :photo %>
   <div id="quantities">
     <%= f.simple_fields_for :quantities do |q| %>
         <%= render 'quantity_fields', f: q %>
         <div class="links">
-          <%= link_to_add_association 'add ingredient', f, :quantities, class: 'btn btn-success', id: 'add-new-quantity' %>
+          <%= link_to_add_association 'add ingredient', f, :quantities, class: 'btn btn-success full-width', id: 'add-new-quantity' %>
         </div>
     <% end %>
   </div>
   <br>
+  <%= f.input :photo %>
   <div class="text-center">
-    <%= f.button :submit, class: 'btn btn-primary', id: 'full-width' %>
+    <%= f.button :submit, class: 'btn btn-primary full-width' %>
   </div>
 <% end %>
+
+<br>
+<br>
+<br>
