changed background colour

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -7,9 +7,11 @@ $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
-$light-gray: #252435;
+$light-gray: #D3D3D3;
 $white: #FFFFFF;
 
 $larder-green-primary: #00AA8D;
 $larder-green-lighter: #00BF9A;
 $larder-green-darker: #008975;
+
+$larder-blue: #252435
