dashboard landing section done

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -26,4 +26,25 @@ h2 {
   color: #1f2e2e;
 }
 
+.dashboard-info {
+  padding: 30px 30px 10px;
+  background: #252435;
+}
+
+.line {
+  width: 300px;
+  border-top: 1px solid gray;
+}
+
+.dashboard-name {
+  color: white;
+}
+
+.edit-profile-button {
+  color: white;
+  background: #ffa502;
+  font-size: 15px;
+  padding: 3px 12px;
+  border-radius: 15px;
+}
 
