colour changed again

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,25 +1,29 @@
 <% content_for(:title, 'Larder\'s recipes') %>
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= asset_path 'larder-banner.png' %>);">
-  <div class="banner-content gradient">
-    <div class="logo">
-      <%= image_tag('Larder-icon-logo.svg', size: "50x50", alt: "Logo") %>
-    </div>
-    <h1>Larder</h1>
-    <h3>Eat more. Waste Less</h3>
-    <p>Which ingredients do you have?</p>
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <%= form_with url: recipes_path, method: :get, remote: true do |f| %>
-            <%= f.text_field :query, value: params[:query], class: 'form-control', id: 'inputSeach', autofocus: true, autocomplete: "off" %>
-            <%= f.submit 'Search', class: 'btn btn-primary hidden', id: 'submitSeachButton' %>
-          <% end %>
+
+<div class="homepage-colour">
+  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= asset_path 'larder-banner.png' %>);">
+    <div class="banner-content gradient">
+      <div class="logo">
+        <%= image_tag('Larder-icon-logo.svg', size: "50x50", alt: "Logo") %>
+      </div>
+      <h1>Larder</h1>
+      <h3>Eat more. Waste Less</h3>
+      <p>Which ingredients do you have?</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <%= form_with url: recipes_path, method: :get, remote: true do |f| %>
+              <%= f.text_field :query, value: params[:query], class: 'form-control', id: 'inputSeach', autofocus: true, autocomplete: "off" %>
+              <%= f.submit 'Search', class: 'btn btn-primary hidden', id: 'submitSeachButton' %>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+
+
 
 
 <!-- set the form to go back to the recipes path but edit the method back to get to load index not the create action-->
@@ -33,4 +37,5 @@
 <%= content_for(:after_js) do %>
   <%= javascript_pack_tag 'recipe_index' %>
 <% end %>
+</div>
 
