added missing code to make login form editable

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,5 @@
 @import "pages/index";
 @import "recipes/index";
 @import "ingredients/index";
-@import "method/index"
+@import "method/index";
+@import "sessions/index";
