added yellow line to tab

--- a/app/assets/stylesheets/components/_tbs-all.scss
+++ b/app/assets/stylesheets/components/_tbs-all.scss
@@ -39,7 +39,7 @@
 .tb.active {
   background: white;
   color: white;
-  border-bottom: 2px solid white;
+  border-bottom: 2px solid $yellow;;
   // border-bottom: opacity: 0.4;
 }
 .tb:hover {
