--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -1,3 +1,20 @@
 #inputSeach {
   border-radius: 25px;
 }
+
+.fixed-header {
+  position: fixed;
+  top:0; left:0;
+  width: 100%;
+}
+
+nav {
+  width:100%;
+  height:60px;
+  z-index:10;
+}
+
+.search {
+  padding: 10px 0px;
+  background-color: $larder-blue;
+}
