Removed star from nav

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,14 +2,12 @@
   <div class="footer-links">
    <!--  <a href="#"><i class="fa fa-github"></i></a>
     <a href="#"><i class="fa fa-instagram"></i></a> -->
-    <%= link_to "/dashboard", class: "footer-star-icon" do %>
-    <%= image_tag "empty-star.png" %>
-    <% end %>
+
     <%= link_to root_path, class: "footer-mag-icon" do %>
-    <%= image_tag "mag-glass.png" %>
+    <%= image_tag "larder-icon-search" %>
     <% end %>
-    <%= link_to "/users/edit", class: "footer-user-icon" do %>
-    <%= image_tag "user-white.png" %>
+    <%= link_to "/dashboard", class: "footer-user-icon" do %>
+    <%= image_tag "larder-icon-profile" %>
   <% end %>
   </div>
 </div>
