--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,23 +1,30 @@
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
-        <div class="form-inputs", >
-          <%= f.input :first_name, required: true, autofocus: true %>
-          <%= f.input :last_name, required: true, autofocus: true %>
-          <%= f.input :email, required: true, autofocus: true %>
-          <%= f.input :avatar %>
-          <%= f.input :avatar_cache, as: :hidden %>
-          <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-          <%= f.input :password_confirmation, required: true %>
-            <div class="form-actions text-center">
-              <%= f.button :submit, "Sign up", class: 'btn btn-primary'%>
-              <%= render "devise/shared/links", class: 'btn btn-primary' %>
-            </div>
-          <% end %>
+<div class="sign-up-form">
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= f.error_notification %>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+          <h2>Sign up</h2>
+          <div class="form-inputs">
+            <%= f.input :first_name, required: true, autofocus: true %>
+            <%= f.input :last_name, required: true, autofocus: true %>
+            <%= f.input :email, required: true, autofocus: true %>
+            <%= f.input :avatar %>
+            <%= f.input :avatar_cache, as: :hidden %>
+            <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+            <%= f.input :password_confirmation, required: true %>
+              <div class="form-actions text-center">
+                <%= f.button :submit, "Sign up", class: 'sign-up'%>
+              </div>
+              <p class="account-q">
+                Already have an account? <%= render "devise/shared/links", class: 'sign-in' %>
+              </p>
+            <% end %>
 
+          </div>
         </div>
       </div>
     </div>
-  </div>
+</div>
+
+
