--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -16,6 +16,11 @@ h2 {
   font-weight: 100;
 }
 
+.float-right {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .trashcan {
   position: absolute;
   bottom: 10px;
@@ -27,8 +32,10 @@ h2 {
 }
 
 .dashboard-info {
-  padding: 30px 30px 10px;
+  padding: 20px 30px 20px;
   background: #252435;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .line {
