--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -5,7 +5,9 @@
     <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown" id="icon-white" ></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li><a href="/users/edit">Edit profile</a></li>
-        <li><a href="">Log out</a></li>
+        <%= link_to destroy_user_session_path, method: :delete do %>
+            <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+        <% end %>
       </ul>
   </div>
   <div class="row">
