--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,12 +1,12 @@
-<div class="footer">
-  <div class="footer-links">
-   <!--  <a href="#"><i class="fa fa-github"></i></a>
-    <a href="#"><i class="fa fa-instagram"></i></a> -->
-    <%= link_to root_path, class: "footer-mag-icon" do %>
-    <%= image_tag "larder-icon-search" %>
-    <% end %>
-    <%= link_to "/dashboard", class: "footer-user-icon" do %>
-    <%= image_tag "larder-icon-profile" %>
-  <% end %>
+<footer>
+  <div class="foot", id="foot">
+    <div class="footer-links">
+      <%= link_to root_path, class: "footer-icon" do %>
+        <%= image_tag "larder-icon-search" %>
+      <% end %>
+      <%= link_to "/dashboard", class: "footer-icon" do %>
+        <%= image_tag "larder-icon-profile" %>
+      <% end %>
+    </div>
   </div>
-</div>
+</footer>
