Added fb shared btn

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -67,6 +67,13 @@ $card-margin-top: 20px;
   right: 0px;
   z-index: 3;
 }
+.fb-share-button {
+  position: absolute !important;
+  padding: 16px;
+  bottom: 3px;
+  right: 0px;
+  z-index: 3;
+}
 .card-category {
     position: absolute;
     bottom: 44px;
