--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -23,6 +23,8 @@
             <%= render 'favourites/favourite_button_not_logged_in' %>
           <% end %>
         </div>
+
+        <div class="fb-share-button" data-href="http://www.larder-recipes.co.uk/recipes/<%= @recipe.id %>" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http://www.larder-recipes.co.uk/recipes/<%= @recipe.id %>&src=sdkpreparse">Share</a></div>
     </div>
   </div>
 </div>
