--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -11,7 +11,7 @@
       </ul>
   </div>
   <div class="row">
-    <div class="col-xs-12 col-sm-6 col-lg-4">
+    <div class="text-center">
       <div class="dashboard-pic">
         <% avatar_url = current_user.facebook_picture_url || current_user.avatar %>
         <%= image_tag avatar_url, class: 'img-circle', size: '80x80'%>
