--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,7 +4,7 @@
       <%= link_to root_path, class: "footer-icon" do %>
         <%= image_tag "larder-icon-search" %>
       <% end %>
-      <%= link_to "/dashboard", class: "footer-icon" do %>
+      <%= link_to dashboard_path, class: "footer-icon" do %>
         <%= image_tag "larder-icon-profile" %>
       <% end %>
     </div>
