--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -5,7 +5,7 @@
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= asset_path 'larder-banner.png' %>);">
     <div class="banner-content gradient">
       <div class="logo">
-        <%= image_tag('Larder-icon-logo.svg', size: "50x50", alt: "Logo") %>
+        <%= image_tag('larder-icon-logo.svg', size: "50x50", alt: "Logo") %>
       </div>
       <h1>Larder</h1>
       <h3>Eat more. Waste Less</h3>
