no cap in file names

--- a/app/views/recipes/_recipe_card.html.erb
+++ b/app/views/recipes/_recipe_card.html.erb
@@ -6,10 +6,10 @@
       </div>
       <div class="card-info">
         <div class="card-servings">
-          <%= image_tag('Larder-icon-servings.svg', size: "20x20", alt: "Servings", class: "cut") %> <%= recipe.servings %> servings
+          <%= image_tag('larder-icon-servings.svg', size: "20x20", alt: "Servings", class: "cut") %> <%= recipe.servings %> servings
         </div>
         <div class="card-duration">
-          <%= image_tag('Larder-icon-duration.svg', size: "20x20", alt: "Duration") %><%= recipe.duration %> min
+          <%= image_tag('larder-icon-duration.svg', size: "20x20", alt: "Duration") %><%= recipe.duration %> min
         </div>
       </div>
       <div class="card-favourite" id="recipe-<%= recipe.id %>">
