--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -6,10 +6,10 @@
         </div>
         <div class="card-info">
           <div class="card-servings">
-            <%= image_tag('larder-icon-servings.svg', size: "20x20", alt: "Servings", class: "cut") %> <%= @recipe.servings %> servings
+            <%= image_tag('servings.svg', size: "20x20", alt: "Servings", class: "cut") %> <%= @recipe.servings %> servings
           </div>
           <div class="card-duration">
-            <%= image_tag('larder-icon-duration.svg', size: "20x20", alt: "Duration") %> <%= @recipe.duration %> min
+            <%= image_tag('duration.svg', size: "20x20", alt: "Duration") %> <%= @recipe.duration %> min
           </div>
         </div>
 
