--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,10 +2,10 @@
   <div class="foot", id="foot">
     <div class="footer-links">
       <%= link_to root_path, class: "footer-icon" do %>
-        <%= image_tag "larder-icon-search.svg" %>
+        <%= image_tag "search.svg" %>
       <% end %>
       <%= link_to dashboard_path, class: "footer-icon" do %>
-        <%= image_tag "larder-icon-profile.svg" %>
+        <%= image_tag "profile.svg" %>
       <% end %>
     </div>
   </div>
