made edits to the index page with padding

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
-  <div class="foot", id="foot">
+  <div class="foot" id="foot">
     <div class="footer-links">
       <%= link_to root_path, class: "footer-icon" do %>
         <%= image_tag "search.svg" %>
