--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,7 +5,7 @@
   flex-direction: row;
   justify-content: space-around;
   position: fixed;
-  bottom: 0;
+  bottom: -1px;
   z-index: 100;
   width: 100%;
   height: 50px;
