--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= stylesheet_pack_tag 'application', media: 'all' %>
   </head>
-  <body>
+  <body class="<%= 'padded' unless (params[:controller] == "recipes" && params[:action] == "index") %>">
    <% if params[:controller] == "pages" && params[:action] == "home" %>
       <% nav_class = "transparent-navbar" %>
     <% else %>
