--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -13,8 +13,7 @@
   <div class="row">
     <div class="text-center">
       <div class="dashboard-pic">
-        <% avatar_url = current_user.facebook_picture_url || current_user.avatar %>
-        <%= image_tag avatar_url, class: 'img-circle', size: '80x80'%>
+        <%= cl_image_tag current_user.photo_url, class: 'img-circle', size: '80x80'%>
       </div>
       <div class="dashboard-name">
         <% full_name = current_user.first_name + " " + current_user.last_name %>
