--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
+<!-- PAGE NOT IN USE - DON"T CODE HERE -->
+
+
 <% content_for(:title) do %>
   Larder
 <% end %>
@@ -26,3 +29,4 @@
 
 
 
+<!-- PAGE NOT IN USE - DON"T CODE HERE -->
