--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -34,8 +34,7 @@
       <% end %>
 
     <div class="text-center">
-        <%= link_to "Back", :back %>
-      </div>
+        <%= link_to "Back", :back %>      </div>
 
     </div>
   </div>
