--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -13,18 +13,20 @@
   <div class="row">
     <div class="text-center">
       <div class="dashboard-pic">
-        <%= cl_image_tag current_user.photo_url, class: 'img-circle', size: '80x80'%>
+        <% avatar_url = current_user.facebook_picture_url || current_user.avatar %>
+        <%= image_tag avatar_url, class: 'img-circle', size: '80x80'%>
       </div>
       <div class="dashboard-name">
         <% full_name = current_user.first_name + " " + current_user.last_name %>
         <%= full_name %>
       </div>
-
     </div>
   </div>
 </div>
 
+<!-- STYLES ALL CARDS -->
 <div class="wrapper">
+
   <div class="tbs">
     <a class="tb active" id="tb-favourite" href="#">
       <p>Favourites</p>
@@ -34,29 +36,30 @@
     </a>
   </div>
 
+<!-- LISTS YOUR FAVOURITE RECIPES -->
   <div class="container" id="cont-favourite">
     <div class="row">
       <% @recipes.each do |recipe| %>
-        <div class="col-xs-12 col-sm-6 col-lg-4 index-card">
-          <%= render 'recipes/recipe_card', recipe: recipe, user: current_user %>
-        </div>
+        <%= render 'recipes/recipe_card', recipe: recipe, user: current_user %>
       <% end %>
     </div>
   </div>
 
+
+<!-- ADD YOUR OWN RECIPE -->
   <div class="container hidden" id="cont-recipe">
-    <div class="col-xs-12 col-lg-12 offset-lg-1"
+    <div class="col-xs-12 col-lg-12 offset-lg-1">
       <div class="text-center">
         <%= link_to new_recipe_path do %>
-            <i class="fa fa-plus-square" aria-hidden="true"></i> Add your own recipe
+        <i class="fa fa-plus-square" aria-hidden="true"></i> Add your own recipe
         <% end %>
       </div>
-    </div>
-    <div class="row">
-      <% @user.recipes.each do |recipe| %>
-        <div class="col-xs-12 col-sm-6 col-lg-4 index-card">
-          <%= render 'recipes/recipe_card', recipe: recipe, user: current_user %>
-        </div>
+  </div>
+
+<!-- LISTS YOUR CREATED RECIPES -->
+  <div class="row">
+    <% @user.recipes.each do |recipe| %>
+        <%= render 'recipes/recipe_card', recipe: recipe, user: current_user %>
       <% end %>
     </div>
   </div>
