--- a/app/views/recipes/_quantity_fields.html.erb
+++ b/app/views/recipes/_quantity_fields.html.erb
@@ -3,10 +3,10 @@
     <%= f.association :ingredient, collection: Ingredient.all, prompt: 'Choose or add ingredient', input_html: { class: 'ingredient-dropdown' }%>
   </div>
   <div class="f-item-q">
-    <%=  f.input :quantity, placeholder: 'Quantity necessary' %>
+    <%=  f.input :quantity, placeholder: 'e.g 200g' %>
   </div>
   <div class="f-item">
-    <%= link_to_remove_association f, class: "trash-icon" do %>
+    <%= link_to_remove_association f, class: "trash-icon-q" do %>
       <i class="fa fa-trash-o" aria-hidden="true"></i>
     <% end %>
   </div>
