--- a/app/assets/stylesheets/recipes/_new.scss
+++ b/app/assets/stylesheets/recipes/_new.scss
@@ -1,5 +1,11 @@
 .form-post {
   color: #333;
+  margin-top: 20px;
+  padding: 10px;
+}
+
+.form-post h3{
+  margin-bottom: 23px;
 }
 
 #recipe_name, #recipe_description, #recipe_servings, #recipe_method, #recipe_duration, #recipe_cuisine {
