--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -131,11 +131,12 @@ $card-margin-top: 20px;
 }
 
 .card-gradient {
+  border-radius: 7px !important;
   height: 100%;
   width: 100%;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#263336+0,263336+79,263336+100&0.24+0,0.56+79,0.8+100 */
-background: -moz-linear-gradient(top, rgba(38,51,54,0.24) 0%, rgba(38,51,54,0.56) 79%, rgba(38,51,54,0.8) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, rgba(38,51,54,0.24) 0%,rgba(38,51,54,0.56) 79%,rgba(38,51,54,0.8) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, rgba(38,51,54,0.24) 0%,rgba(38,51,54,0.56) 79%,rgba(38,51,54,0.8) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3d263336', endColorstr='#cc263336',GradientType=0 ); /* IE6-9 */
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#263336+0,263336+79,263336+100&0.24+0,0.56+79,0.8+100 */
+  background: -moz-linear-gradient(top, rgba(38,51,54,0.24) 0%, rgba(38,51,54,0.56) 79%, rgba(38,51,54,0.8) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(38,51,54,0.24) 0%,rgba(38,51,54,0.56) 79%,rgba(38,51,54,0.8) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(38,51,54,0.24) 0%,rgba(38,51,54,0.56) 79%,rgba(38,51,54,0.8) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3d263336', endColorstr='#cc263336',GradientType=0 ); /* IE6-9 */
 }
