--- a/app/assets/stylesheets/recipes/_new.scss
+++ b/app/assets/stylesheets/recipes/_new.scss
@@ -5,7 +5,11 @@
 }
 
 .form-post h3{
-  margin-bottom: 23px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  font-size: 25px;
+  color: $larder-blue;
+  opacity: 0.8;
 }
 
 #recipe_name, #recipe_description, #recipe_servings, #recipe_method, #recipe_duration, #recipe_cuisine {
