--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :meta_title, "#{@recipe.name}" %>
+<% content_for :meta_description, @recipe.description %>
+<% content_for :meta_image, cl_image_path(@recipe.photo.url) %>
+
 <div class="recipe-header">
     <div class="card" style="background-image: url(<%= @recipe.photo %>);">
       <div class="card-gradient">
