fixes meta tags

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for :meta_title, "#{@recipe.name}" %>
+<% content_for :meta_title, @recipe.name %>
 <% content_for :meta_description, @recipe.description %>
 <% content_for :meta_image, cl_image_path(@recipe.photo.url) %>
 
