--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -18,7 +18,7 @@
       <div class="row">
         <div class="col-xs-12">
           <%= form_with url: recipes_path, method: :get, remote: true do |f| %>
-            <%= f.text_field :query, value: params[:query], class: 'form-control', id: 'inputSeach', autofocus: true, autocomplete: "off" %>
+            <%= f.text_field :query, value: params[:query], class: 'form-control', id: 'inputSeach', autofocus: true, autocomplete: "off", placeholder: 'e.g. Salmon, leeks, potatoes...' %>
             <%= f.submit 'Search', class: 'btn btn-primary hidden', id: 'submitSeachButton' %>
           <% end %>
         </div>
