fixed sticky search and navbar is very pretty now

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -11,7 +11,7 @@
   height: 50px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
-  // transition: top 0.5s ease-in-out;
+  // transition: 0.5s;
 }
 .footer-links {
   display: flex;
