--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class="recipe-header">
     <div class="card" style="background-image: url(<%= @recipe.photo %>);">
-      <div class="card-gradient">
+      <div class="card-gradient show-card">
         <div class="card-category">
           <%= @recipe.name %>
         </div>
