--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -12,8 +12,10 @@
 
 .fixed-header {
   position: fixed;
-  top:0; left:0;
-  width: 100%;
+  margin: 0 10px;
+  top:0;
+  left:0;
+  width: calc(100% - 20px);
 }
 
 nav {
