added tagline, and fixed spacing issue

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -9,6 +9,7 @@
       </div>
       <h1>Larder</h1>
       <h3>Eat more. Waste Less</h3>
+      <p class="tag-line">Use what you have at home without the hassle.</p>
       <p>Which ingredients do you have?</p>
       <nav class="search">
         <div class="container">
