--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -14,6 +14,7 @@
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
 
   margin-bottom: 2px;
+  margin-top: 0px;
 }
 .banner h3 {
   color: white;
@@ -26,7 +27,7 @@
   color: white;
   font-size: 15px;
   font-weight: lighter;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
   color: rgb(255, 255, 255);
   opacity: 0.6;
   margin-top: 50px;
@@ -47,7 +48,7 @@ height: 426px;
 // height: calc(100vh - 70px);
 width: 100%;
 position: absolute;
-padding: 125px 10px;
+padding: 137px 10px;
 }
 
 // #home-input {
