--- a/app/assets/stylesheets/components/_form_recipe.scss
+++ b/app/assets/stylesheets/components/_form_recipe.scss
@@ -17,10 +17,29 @@
 
 .select2-selection--single {
   border-radius: 15px !important;
+  font-size: 12px;
+  text-align: center;
+  padding-top: 4px;
 }
 
+.radius-15 {
+  border-radius: 15px !important;
+  font-size: 12px;
+      text-align: center;
+      padding-top: 4px;
+}
+
+.select2-selection__arrow {
+    height: 26px;
+    position: absolute;
+    top: 6px !important;
+    right: 8px !important;
+    width: 20px;
+}
+
+
 .quantities-fields {
-  position: relative;
+  // position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -32,12 +51,16 @@
     flex: 0 0 90px !important;
     border-radius: 15px !important;
   }
-  .trash-icon {
-    position: absolute;
-    right: 0px;
-    bottom: 21px;
+  .trash-icon-q {
+
+
+    // position: absolute;
+    // right: 0px;
+    // bottom: 21px;
     i {
       font-size: 20px;
+      margin-top: 16px;
+
     }
   }
 }
