--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -25,7 +25,7 @@
     <%= f.simple_fields_for :quantities do |q| %>
         <%= render 'quantity_fields', f: q %>
         <div class="links">
-          <%= link_to_add_association 'add ingredient', f, :quantities, class: 'btn btn-success full-width-q', id: 'add-new-quantity' %>
+          <%= link_to_add_association 'Add ingredient', f, :quantities, class: 'btn btn-success full-width-q', id: 'add-new-quantity' %>
         </div>
     <% end %>
   </div>
