button added on add recipe/dashboard

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -55,3 +55,12 @@ h2 {
   border-radius: 15px;
 }
 
+.add-recipe {
+  background-color: #ffa502;
+  color: white;
+  font-size: 16px;
+  border-radius: 15px;
+  width: 75%;
+  font-weight: lighter;
+  margin-top: -10px;
+}
