--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:title, 'Larder\'s recipes') %>
+<% content_for(:title, 'Larder\'s recipes - Eat More Waste Less') %>
 
 <div class="homepage-colour">
 
