--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="form-actions text-center">
-          <%= f.button :submit, "Update account changes", class: 'btn btn-primary' %>
+          <%= f.button :submit, "Update account changes", class: 'btn update-account' %>
         </div>
       <% end %>
 
